--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,12 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/datatables.net-dt/css/dataTables.dataTables.min.css"
+            ],
+            "scripts": [
+             "node_modules/jquery/dist/jquery.js",
+            "node_modules/datatables.net/js/dataTables.min.js"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
