--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.5",
+    "angular-datatables": "^17.1.0",
+    "datatables.net": "^2.3.3",
+    "datatables.net-dt": "^2.3.3",
     "express": "^5.1.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -39,6 +43,7 @@
     "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.33",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
