--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/ssr": "^20.0.5",
     "angular-datatables": "^17.1.0",
     "datatables.net": "^2.3.3",
+    "datatables.net-bs5": "^1.11.3",
     "datatables.net-dt": "^2.3.3",
     "express": "^5.1.0",
     "jquery": "^3.7.1",
@@ -41,6 +42,7 @@
     "@angular/build": "^20.0.5",
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^20.0.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.33",
